tests/workflow/negative/graph-AND.dot
digraph workflow {
edge [color="#000000"]
graph [bgcolor=transparent]


initial [shape=point; width=0.3; style=filled; color="#0e64ce"; label=""]
eitherSet [shape=ellipse; fontname="Arial"; fontsize=16; style=filled; color=black; fillcolor=white;]
xIsSet [shape=ellipse; fontname="Arial"; fontsize=16; style=filled; color=black; fillcolor=white;]
yIsSet [shape=ellipse; fontname="Arial"; fontsize=16; style=filled; color=black; fillcolor=white;]
terminal [shape=point; width=0.3; peripheries=2; style=filled; color="#d11010"; label=""]

1[label=<<FONT POINT-SIZE="16">setBoth</FONT><FONT POINT-SIZE="10" COLOR="blue"> </FONT>>shape=box; fontname="Arial"; style=filled; color=black; fillcolor=gray75;]
2[label=<<FONT POINT-SIZE="16">setX2</FONT><FONT POINT-SIZE="10" COLOR="blue"> </FONT>>shape=box; fontname="Arial"; style=filled; color=black; fillcolor=gray75;]
3[label=<<FONT POINT-SIZE="16">setY2</FONT><FONT POINT-SIZE="10" COLOR="blue"> </FONT>>shape=box; fontname="Arial"; style=filled; color=black; fillcolor=gray75;]
4[label=<<FONT POINT-SIZE="16">setZ</FONT><FONT POINT-SIZE="10" COLOR="blue"> </FONT>>shape=box; fontname="Arial"; style=filled; color=black; fillcolor=gray75;]

initial -> 1 ; 1 -> {xIsSet, yIsSet}
yIsSet -> 2 ; 2 -> eitherSet
xIsSet -> 3 ; 3 -> eitherSet
eitherSet -> 4 ; 4 -> terminal

{rank=same xIsSet yIsSet}


}
